[package]
name = "powmr2mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "3.0.1"
paho-mqtt = { version = "0.12.2", features = ["vendored-ssl"] }
rusb = "0.9.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
snafu = "0.7.5"
